# stele

./: .gitignore  Cargo.toml  README.md  stele.toml
.github/workflows/: ci.yml  release.yml
examples/locales/: en.json  es.json  pl.json
npm/: stamp-version.mjs
npm/cli/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
src/: check.rs  config.rs  exchange.rs  ir.rs  main.rs  model.rs  plural.rs
src/emit/: mod.rs  pkg.rs  react.rs  store.rs  swift.rs  ts.rs
